solved shift caused by scrollbar

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,6 +10,10 @@
     font-family: 'Roboto', sans-serif;
 }
 
+html{
+    scrollbar-gutter: stable;
+}
+
 body{
     overflow: hidden;
 }
